# ocpi-py

./: .gitignore  .pdm-python  pyproject.toml
src/ocpi_py/: __init__.py
tests/: test_001_ocpiapp.py  test_002_ocpiapirouter.py
